# otawa

./: .gitignore  .gitmodules  Makefile  README.md  patmos.nmp
elm/: CMakeLists.txt  Doxyfile  FindLibXml  FindLibXml2  FindLibXslt  INSTALL  NEWS  README.DEV  config.in
elm/include/elm/: PreIterator.h  assert.h  debug.h  options.h  rtti.h  string.h  type_info.h  types.h  utility.h
elm/src/: CMakeLists.txt  alloc_BlockAllocator.cpp  alloc_BlockAllocatorWithGC.cpp  alloc_DefaultAllocator.cpp  alloc_SimpleGC.cpp  alloc_StackAllocator.cpp  array.cpp  checksum_MD5.cpp  concepts.h  debug.cpp  debug_CrashHandler.cpp  debug_GDBCrashHandler.cpp  doc.h  genstruct.h  genstruct_SLList.cpp  genstruct_SortedSLList.cpp  inhstruct_SLList.cpp  int.cpp  io_BlockOutStream.cpp  io_BufferedOutStream.cpp  io_IOException.cpp  io_InStream.cpp  io_Input.cpp  io_OutFileStream.cpp  io_Output.cpp  io_UnixOutStream.cpp  io_WinInStream.cpp  io_WinOutStream.cpp  net_ServerSocket.cpp  option_BoolOption.cpp  option_Manager.cpp  option_StandardOption.cpp  option_SwitchOption.cpp  option_ValueOption.cpp  serial2_XOMSerializer.cpp  serial2_XOMUnserializer.cpp  serial2_serial.cpp  serial_SerialClass.cpp  serial_Serializer.cpp  serial_TextSerializer.cpp  (+21 more)
elm/test/: CMakeLists.txt  libmyplugin.eld  plugin.cpp  serial2.cpp  test.cc  test_avl.cpp  test_cleaner.cpp  test_file.cpp  test_formatter.cpp  test_hashkey.cpp  test_hashtable.cpp  test_ini.cpp  test_int.cpp  test_io_format.cpp  test_list.cpp  test_lock.cpp  test_option.cpp  test_plugin.cpp  test_process.cpp  test_simplegc.cpp  test_sllist.cpp  test_sorted_bintree.cpp  test_string.cpp  test_thread.cpp  test_type_info.cpp  test_vector.cpp  test_wah.cpp
elm/tools/: elm-plugin.cpp
otawa/: CMakeLists.txt  Doxyfile  INSTALL
otawa/data/cmake/: Otawa.cmake
otawa/data/dtd/: pipeline.dtd
otawa/doc/dev/: dev-loader.thot  dev-script.thot
otawa/doc/manual/: manual-appli.thot  manual-formats.thot
otawa/src/: CMakeLists.txt
otawa/src/arm2/: CMakeLists.txt  arm.cpp  otawa_kind.nmp  otawa_multi.nmp  otawa_sem.nmp  otawa_target.nmp
otawa/src/ast/: AST.cpp  CMakeLists.txt  ast_lexer.ll  ast_parser.yy
otawa/src/bpred/: BPredProcessor.cpp  BPredProcessor_NoConflict.cpp  CMakeLists.txt
otawa/src/branch/: CMakeLists.txt  branch_BranchBuilder.cpp  branch_BranchProblem.cpp  branch_hook.cpp
otawa/src/cat/: CMakeLists.txt  cat_CATBuilder.cpp  cat_CATConstraintBuilder.cpp  cat_hook.cpp
otawa/src/ccg/: CMakeLists.txt  ccg_Builder.cpp  ccg_ConstraintBuilder.cpp  ccg_DFA.cpp  ccg_Node.cpp  ccg_hook.cpp
otawa/src/cfgio/: CMakeLists.txt  cfgio_Input.cpp  cfgio_Output.cpp
otawa/src/config/: CMakeLists.txt  config.cpp
otawa/src/dcache/: CMakeLists.txt  Dirty.cpp  dcache.cpp  dcache_ACSBuilder.cpp  dcache_ACSMayBuilder.cpp  dcache_BlockBuilder.cpp  dcache_CLPBlockBuilder.cpp  dcache_CatBuilder.cpp  dcache_CatConstraintBuilder.cpp  dcache_WCETFunctionBuilder.cpp
otawa/src/dumpcfg/: CMakeLists.txt  DisassemblerDisplayer.cpp  dumpcfg.cpp
otawa/src/dynbranch/: CMakeLists.txt
otawa/src/etime/: CMakeLists.txt  EdgeTimeBuilder.cpp  StandardEventBuilder.cpp  hook.cpp
otawa/src/ets/: CMakeLists.txt  ets_AbstractCacheState.cpp
otawa/src/lp_solve/: CMakeLists.txt
otawa/src/lp_solve5/: CMakeLists.txt  lp_solve5.cpp
otawa/src/mkff/: CMakeLists.txt  mkff.cpp
otawa/src/ocpp/: CMakeLists.txt
otawa/src/odec/: CMakeLists.txt  odec.cpp
otawa/src/odfa/: CMakeLists.txt  odfa.cpp
otawa/src/odisasm/: CMakeLists.txt  odisasm.cpp
otawa/src/odisplay/: CMakeLists.txt  display.cpp  display_CFGOutput.cpp  graphviz_Graph.cpp
otawa/src/oipet/: CMakeLists.txt  oipet.cpp
otawa/src/opcg/: CMakeLists.txt  opcg.cpp
otawa/src/ostat/: CMakeLists.txt
otawa/src/owcet/: CMakeLists.txt  owcet.cpp
otawa/src/ppc2/: CMakeLists.txt  otawa_sem.nmp  ppc.cpp
otawa/src/prog/: BasicBlock.cpp  CFG.cpp  CFGInfo.cpp  CMakeLists.txt  Edge.cpp  Loader.cpp  Process.cpp  ai.cpp  app_Application.cpp  cache_ACSBuilder.cpp  cache_CAT2Builder.cpp  cache_CAT2ConstraintBuilder.cpp  cache_CAT2NCBuilder.cpp  cache_LBlock.cpp  cache_LBlockBuilder.cpp  cfg_CFGBuilder.cpp  cfg_CFGCollector.cpp  cfg_DelayedBuilder.cpp  cfg_LoopInfoBuilder.cpp  cfg_SubCFGBuilder.cpp  cfg_VirtualCFG.cpp  cfg_Virtualizer.cpp  clp_analysis.cpp  clp_symbolic_expr.cpp  concepts.h  dfa_BitSet.cpp  dfa_State.cpp  exegraph_ParamExeGraph.cpp  feature.h  hard_Dumper.cpp  hard_Memory.cpp  hard_Processor.cpp  hard_Register.cpp  hardware_CacheConfiguration.cpp  hardware_Platform.cpp  ilp_Constraint.cpp  ilp_Expression.cpp  ilp_ILPPlugin.cpp  ilp_System.cpp  ilp_Var.cpp  (+35 more)
otawa/test/: CMakeLists.txt
otawa/test/aggregation/: AggregationGraph.cpp  AggregationGraph.h  BBTimeSimulator.cpp  BBTimeSimulator.h  EnhacedAggregationGraph.cpp  EnhacedAggregationGraph.h  Header.cpp  Header.h  SequenceBasicBlock.cpp  SequenceBasicBlock.h  aff  test_aggregation.cpp
otawa/test/categorisation/: bs.out  crc.out  fft1.out  fft1k.out  fibcall.out  fir.out  insertsort.out  jfdctint.out  lms.out  ludcmp.out  matmul.out  minver.out  qurt.out  select.out  test-categorisation.cpp  test.sh
otawa/test/ccg/: bs.out  crc.out  fft1.out  fft1k.out  fir.out  icache.xml  insertsort.out  jfdctint.out  lms.out  ludcmp.out  minver.out  qurt.out  select.out  test-ccg.cpp  test.sh
otawa/test/checksum/: CMakeLists.txt  test_checksum.cpp
otawa/test/clp/: test_clp.cpp
otawa/test/constraint_loader/: test_constraint_loader.cpp
otawa/test/ct/: CMakeLists.txt  bs.out  crc.out  fft1.out  fft1k.out  fibcall.out  fir.out  insertsort.out  jfdctint.out  lms.out  ludcmp.out  matmul.out  minver.out  qurt.out  select.out  test.sh  test_ct.cpp
otawa/test/ctxloop/: test.arm  test.c  test.ff  testl.arm  testl.ff  testlx.ffx  testx.ffx
otawa/test/delta/: DeltaCFGDrawer.cpp  DeltaCFGDrawer.h  bs.out  crc.out  fft1.out  fft1k.out  fibcall.out  fir.out  (+10 more)
patmos/otawa-patmos/: .cproject  CMakeLists.txt  config.h  delayed.nmp  patmos.cpp  sem.nmp  sem.tpl  target.nmp
patmos/patmos-wcet/: BBTimer.cpp  CMakeLists.txt  MethodCacheContributer.cpp  patmos_wcet_dcache.osx
(+298 files in other folders)
